export class User {
    constructor(
        public readonly id: string,
        public readonly name: string
    ) { }
}
