export class Seat {
  constructor(
    public readonly id: string,
    public readonly row: string,
    public readonly number: number
  ) {}
}
