export class Show {
  constructor(
    public readonly id: string,
    public readonly movieName: string,
    public readonly startTime: Date
  ) {}
}
